@@ -315,15 +315,17 @@ class Elasticsearch(val esVersion: String,
     (Version.greaterOrEqualThan(esVersion, 7, 15, 1) && Version.lowerThan(esVersion, 7, 17, 7)) ||
     (Version.greaterOrEqualThan(esVersion, 8, 0, 0) && Version.lowerThan(esVersion, 8, 5, 0))
 
+  // ES versions that bundle JDK 18, which we replace with Corretto 19 to fix JDK-8287073.
+  private def needsCorretto19: Boolean =
+    (Version.greaterOrEqualThan(esVersion, 7, 17, 3) && Version.lowerThan(esVersion, 7, 17, 7)) ||
+      (Version.greaterOrEqualThan(esVersion, 8, 2, 0) && Version.lowerThan(esVersion, 8, 5, 0))
+
   // Replace the bundled JDK in-place with the cached custom JDK tarball.
   private def replaceBundledJdk(image: DockerImageDescription): DockerImageDescription = {
     // JDK 17.0.0–17.0.4 and JDK 18 have cgroup v2 bug JDK-8287073 (NPE in CgroupV2Subsystem).
     // JDK-17 builds (ES 7.15.1–7.15.2, 7.16.x, 7.17.0–7.17.2, 8.0.x–8.1.x) → Corretto 17.0.5 (backport JDK-8288308).
     // JDK-18 builds (ES 7.17.3–7.17.6, 8.2.x–8.4.x) → Corretto 19.0.0 (first JDK 19 with the fix).
     // Downloaded once per JVM process and reused across all container builds.
-    val needsCorretto19 =
-      (Version.greaterOrEqualThan(esVersion, 7, 17, 3) && Version.lowerThan(esVersion, 7, 17, 7)) ||
-      (Version.greaterOrEqualThan(esVersion, 8, 2, 0) && Version.lowerThan(esVersion, 8, 5, 0))
     val tarball =
       if (needsCorretto19) JDK.AmazonCorretto1900jdk.tarball
       else JDK.AmazonCorretto1705jdk.tarball
@@ -350,6 +352,7 @@ class Elasticsearch(val esVersion: String,
       .add("-Xmx512m")
       .add("-Djava.security.egd=file:/dev/./urandoms")
       .add("-Xdebug", s"-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=${xDebugAddressBasedOn(esVersion)}")
+      .addWhen(needsCorretto19, "--add-modules=jdk.net")
   }
 
   private def xDebugAddressBasedOn(esVersion: String) = {
@@ -390,6 +393,10 @@ final case class EsJavaOptsBuilder(options: Seq[String]) {
 
   def add(option: String*): EsJavaOptsBuilder = {
     this.copy(options = this.options ++ option.toSeq)
+  }
+
+  def addWhen(condition: Boolean, option: => String): EsJavaOptsBuilder = {
+    if (condition) add(option) else this
   }
 }
 
